@@ -1,3 +1,12 @@
+2007-05-21  Jakub Jelinek  <jakub@redhat.com>
+
+	[BZ #4514]
+	* stdio-common/vfprintf.c (vfprintf): Don't shadow workstart variable,
+	reinitialize workend at the start of each do_positional format spec
+	loop, free workstart before do_positional loops.
+	(printf_unknown): Fix size of work_buffer.
+	* stdio-common/tst-sprintf.c (main): Add 3 new testcases.
+
 2007-05-10  Ulrich Drepper  <drepper@redhat.com>
 
 	* include/sys/cdefs.h: Redefine __nonnull so that test for
